# Yadro-TestTask-2023

./: CMakeLists.txt  README.md  conanfile.txt
configs/: config.json
src/: CMakeLists.txt  main.cpp  tape-sorter.cpp  tape-sorter.hpp
src/tape/: file-tape.cpp  file-tape.hpp  tape-base.hpp
src/utils/: cmd-parser.cpp  cmd-parser.hpp  config.cpp  config.hpp
tests/: CMakeLists.txt  file-tape-test.cpp  tape-sorter-test.cpp
tests/test_configs/: config.json
